# autonomousSystems

./: .gitignore
1_kf/: CMakeLists.txt
1_kf/include/: kalman_filter.h
1_kf/matlab/: Plots.m  Plots.m~
1_kf/src/: kalman_filter.cpp  main.cpp
2_EKF/: CMakeLists.txt
2_EKF/include/: EKF.h
2_EKF/src/: EKF.cpp  main.cpp
3_UKF/: CMakeLists.txt
3_UKF/include/: UKF.h  simulation.h
3_UKF/matlab/: PlotData.m
3_UKF/src/: UKF.cpp  main.cpp  simulation.cpp
4_pf/: CMakeLists.txt
4_pf/include/: particle_filter.h  simulation.h
4_pf/matlab/: PlotData.m  animate.m
4_pf/src/: main.cpp  particle_filter.cpp  simulation.cpp
5_OCM/: CMakeLists.txt
5_OCM/include/: color.h  environment.h
5_OCM/matlab/: create_map.m  cvtToBinary.m  state_meas_data.mat  state_meas_data_known.mat
5_OCM/src/: color.cpp  environment.cpp  main.cpp
6_EKF_SLAM/: CMakeLists.txt
6_EKF_SLAM/include/ekfslam/: ekf_slam.h
6_EKF_SLAM/matlab/: Plots.m  RobotAnimation.m  animate.m  mytest.m
6_EKF_SLAM/src/: ekf_slam.cpp  main.cpp
7_FAST_SLAM/: CMakeLists.txt
7_FAST_SLAM/include/fastSlam/: fast_slam.h
7_FAST_SLAM/matlab/: Plots.m  RobotAnimation.m
7_FAST_SLAM/src/: fast_slam.cpp  main.cpp
8_MDP/matlab/: MDP_hw_map.m  draw_arrow.m  hw2.m  hw3.m  hw4.m  mdp.m  test.mat
9_PMODP/matlab/: POMDP.m  prune.m
midterm/matlab/: EIF.m  RobotAnimation.m  main.m
midterm/notes/: midterm.lyx
project/: project.lyx
